@@ -8,18 +8,16 @@
     <groupId>com.example</groupId>
     <artifactId>auction-system</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath> </parent>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
 
-  <groupId>trang_chu</groupId>
   <artifactId>Clients</artifactId>
   <name>Clients</name>
   <packaging>jar</packaging>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>21</maven.compiler.source>
-    <maven.compiler.target>21</maven.compiler.target>
-    <maven.compiler.release>21</maven.compiler.release>
+    <javafx.version>21</javafx.version>
     <javafx.mainClass>controller.Launcher</javafx.mainClass>
     <javafx.skip>false</javafx.skip>
     <junit.version>5.10.2</junit.version>
@@ -36,21 +34,20 @@
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
+      <version>${javafx.version}</version>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
+      <version>${javafx.version}</version>
     </dependency>
+
     <dependency>
       <groupId>org.controlsfx</groupId>
       <artifactId>controlsfx</artifactId>
       <version>11.1.2</version>
     </dependency>
 
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-    </dependency>
     <dependency>
       <groupId>com.fatboyindustrial.gson-javatime-serialisers</groupId>
       <artifactId>gson-javatime-serialisers</artifactId>
@@ -73,8 +70,7 @@
       <version>3.18.0</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
+      <groupId>org.apache.httpcomponents</groupId> <artifactId>httpclient</artifactId>
       <version>4.5.14</version>
     </dependency>
 
@@ -120,23 +116,9 @@
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
-        <executions>
-          <execution>
-            <id>default-cli</id>
-            <configuration>
-              <mainClass>${javafx.mainClass}</mainClass>
-              <launcher>app</launcher>
-              <options>
-                <option>--enable-native-access=javafx.graphics</option>
-              </options>
-              <jlinkZipName>app</jlinkZipName>
-              <jlinkImageName>app</jlinkImageName>
-              <noManPages>true</noManPages>
-              <stripDebug>true</stripDebug>
-              <noHeaderFiles>true</noHeaderFiles>
-            </configuration>
-          </execution>
-        </executions>
+        <configuration>
+          <mainClass>${javafx.mainClass}</mainClass>
+        </configuration>
       </plugin>
 
       <plugin>
